--- a/BookHub/Layout/_General.Master
+++ b/BookHub/Layout/_General.Master
@@ -24,9 +24,9 @@
             </div>
             <div class="menu" id="menu">
                 <ul class="menu-inner">
-                    <li class="menu-item"><a href="#" class="menu-link">Home</a></li>
-                    <li class="menu-item"><a href="#" class="menu-link">Feature</a></li>
+                    <li class="menu-item"><a href="Home.aspx" class="menu-link">Home</a></li>
                     <li class="menu-item"><a href="#" class="menu-link">Product</a></li>
+                    <li class="menu-item"><a href="CartProduct.aspx" class="menu-link">Cart</a></li>
                     <li class="menu-item"><a href="#" class="menu-link">Support</a></li>
                 </ul>
             </div>
