--- a/BookHub/Layout/_General.Master
+++ b/BookHub/Layout/_General.Master
@@ -4,42 +4,49 @@
 
 <html>
 <head runat="server">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
-<title>Title</title>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-<link href="../css/style.css" rel="stylesheet" />
+    <title>Title</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link href="../css/style.css" rel="stylesheet"/>
     <asp:ContentPlaceHolder ID="Head" runat="server">
-</asp:ContentPlaceHolder>
-
+    </asp:ContentPlaceHolder>
 </head>
 <body>
-    <header class="header inline-padding-2" id="header">
-        <nav class="navbar">
-            <a href="#" class="brand">Book Hub</a>
-            <div class="burger" id="burger">
-                <div class="burger-line"></div>
-                <div class="burger-line"></div>
-                <div class="burger-line"></div>
-            </div>
-            <div class="menu" id="menu">
-                <ul class="menu-inner">
-                    <li class="menu-item"><a href="Home.aspx" class="menu-link">Home</a></li>
-                    <li class="menu-item"><a href="#" class="menu-link">Product</a></li>
-                    <li class="menu-item"><a href="CartProduct.aspx" class="menu-link">Cart</a></li>
-                    <li class="menu-item"><a href="#" class="menu-link">Support</a></li>
-                </ul>
-            </div>
-            <a href="~/Login.aspx" class="menu-block" runat="server" id="authentication">Login</a>
-        </nav>
-    </header>
-    <main>
-        <asp:ContentPlaceHolder ID="MainContent" runat="server"></asp:ContentPlaceHolder>
-        <div id="simpleToast" runat="server">
+<header class="header inline-padding-2" id="header">
+    <nav class="navbar">
+        <a href="#" class="brand">Book Hub</a>
+        <div class="burger" id="burger">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+               <path fill="#ffffff" d="M0 96C0 78.3 14.3 64 32 64l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 128C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 288c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32L32 448c-17.7 0-32-14.3-32-32s14.3-32 32-32l384 0c17.7 0 32 14.3 32 32z"/>
+            </svg>
         </div>
-    </main>
-    
-    <footer class="footer">
+        <div class="menu" id="menu">
+            <ul class="menu-inner">
+                <li class="menu-item">
+                    <a href="Home.aspx" class="menu-link">Home</a>
+                </li>
+                <li class="menu-item">
+                    <a href="#" class="menu-link">Product</a>
+                </li>
+                <li class="menu-item">
+                    <a href="CartProduct.aspx" class="menu-link">Cart</a>
+                </li>
+                <li class="menu-item">
+                    <a href="#" class="menu-link">Support</a>
+                </li>
+            </ul>
+        </div>
+        <a href="/Login.aspx" class="menu-block" runat="server" id="authentication">Login</a>
+    </nav>
+</header>
+<main>
+    <asp:ContentPlaceHolder ID="MainContent" runat="server"></asp:ContentPlaceHolder>
+    <div id="simpleToast" runat="server">
+    </div>
+</main>
+
+<footer class="footer">
     <div class="container">
         <div class="footer-top">
             <div class="footer-brand">
@@ -47,10 +54,18 @@
             </div>
             <nav class="footer-nav">
                 <ul>
-                    <li><a href="/about">About Us</a></li>
-                    <li><a href="/contact">Contact</a></li>
-                    <li><a href="/privacy">Privacy Policy</a></li>
-                    <li><a href="/terms">Terms of Service</a></li>
+                    <li>
+                        <a href="/about">About Us</a>
+                    </li>
+                    <li>
+                        <a href="/contact">Contact</a>
+                    </li>
+                    <li>
+                        <a href="/privacy">Privacy Policy</a>
+                    </li>
+                    <li>
+                        <a href="/terms">Terms of Service</a>
+                    </li>
                 </ul>
             </nav>
         </div>
@@ -70,7 +85,7 @@
         </div>
     </div>
 </footer>
-    <asp:ContentPlaceHolder ID="Scripts" runat="server"></asp:ContentPlaceHolder>
-    <script src="../js/script.js"></script>
+<asp:ContentPlaceHolder ID="Scripts" runat="server"></asp:ContentPlaceHolder>
+<script src="../js/script.js"></script>
 </body>
 </html>
