--- a/BookHub/Layout/_General.Master
+++ b/BookHub/Layout/_General.Master
@@ -6,8 +6,7 @@
 <head runat="server">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
-    <title>Title</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <title>BookHub</title>
     <link href="../css/style.css" rel="stylesheet"/>
     <asp:ContentPlaceHolder ID="Head" runat="server">
     </asp:ContentPlaceHolder>
@@ -45,7 +44,6 @@
     <div id="simpleToast" runat="server">
     </div>
 </main>
-
 <footer class="footer">
     <div class="container">
         <div class="footer-top">
